Našel bug glede ničle

--- a/CB.ipynb
+++ b/CB.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -75,12 +75,16 @@
    "source": [
     "def dec_otp(key, ct):\n",
     "    \"\"\"Desifrirni algoritem enkratne podloge\"\"\"\n",
-    "    return xor_bytes(key, ct)"
+    "    return xor_bytes(key, ct)\n",
+    "\n",
+    "def dec_otp_partial(key, ct):\n",
+    "    \"\"\"Desifrira samo tiste znake, kjer kljuc ni 0 -- ce je, kot znak nastavi *\"\"\"\n",
+    "    return bytes(k ^ c if k > 0 else ord(\"*\")  for k, c in zip(key, ct))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -130,7 +134,7 @@
    "metadata": {},
    "source": [
     "### Nekaj namigov\n",
-    "- Kodiranje je ASCII. V abecedi ni šumnikov, so le (velike tiskane) črke in presledek\n",
+    "- Kodiranje je ASCII. V abecedi ni šumnikov, števk in ločilČ imamo le (male tiskane) črke in presledek\n",
     "- Pri črki bo bit 6 vedno nastavljen. To pomeni, da je vsaka črka zakodirana z znakom, ki je > 64\n",
     "- Pri presledku je bit 6 vedno nenastavljen. Presledek in ASCII vrednost 32\n",
     "- Ko naredimo XOR črke in presledka bo bit 6 nastavljen. Torej če je ASCII vrednost v $d$ nad 64, to pomeni, da gledamo vrednost, ki je nastala z XOR presledka in neke črke: Če XOR-amo 32 (presledek) dobimo črko v enem čistopisu (sicer ne vemo katerem)\n",
@@ -144,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 88,
    "metadata": {
     "tags": []
    },
@@ -153,7 +157,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3944954128440367\n"
+      "0.7889908256880734\n",
+      "* ***la*i n*ro*ov so m** stevilnimi *ar*di tudi slo*enci s p*l*ti*ni* program*m zahte*al* zedi*je*o slo*enij*\n"
      ]
     }
    ],
@@ -164,14 +169,14 @@
     "    for k in range(len(ciphertexts[0])):\n",
     "        guess = None\n",
     "\n",
-    "        for c1 in ciphertexts:\n",
-    "            for c2 in ciphertexts:\n",
+    "        for i, c1 in enumerate(ciphertexts):\n",
+    "            for j, c2 in enumerate(ciphertexts):\n",
+    "                print(k, i, j)\n",
     "                if c1 == c2:\n",
     "                    continue\n",
     "\n",
-    "                xor = c1[k] ^ c2[k]\n",
-    "                \n",
-    "                if 0 < xor < 65:\n",
+    "                if 0 < c1[k] ^ c2[k] < 65:\n",
+    "                    print(\"break: < 65\")\n",
     "                    guess = ord('?')\n",
     "                    break\n",
     "\n",
@@ -179,13 +184,16 @@
     "            \n",
     "            if guess == ' ': \n",
     "                key[k] = c1[k] ^ ord(' ')\n",
+    "                print(k, i, j, \"break: found SPACE\")\n",
+    "                #print(\"break: found SPACE\")\n",
     "                break\n",
     "        \n",
     "    return key\n",
     "\n",
     "def multiple_xor(position, ciphertexts):\n",
+    "\n",
     "    for c1 in ciphertexts:\n",
-    "        if all(c1[position] ^ c2[position] >= 65 for c2 in ciphertexts if c2 != c1):\n",
+    "        if all(c1[position] ^ c2[position] >= 65 or c1[position] ^ c2[position] == 0 for c2 in ciphertexts if c2 != c1):\n",
     "            return c1[position] ^ ord(' ')\n",
     "    \n",
     "    return 0\n",
@@ -193,13 +201,26 @@
     "def guess_key(ciphertexts):\n",
     "    key = bytearray(len(ciphertexts[0]))\n",
     "\n",
-    "    for k in range(len(ciphertexts[0])):\n",
-    "        key[k] = multiple_xor(k, ciphertexts)\n",
+    "    for i in range(len(ciphertexts[0])):\n",
+    "        key[i] = multiple_xor(i, ciphertexts)\n",
     "    return key\n",
     "    \n",
     "gk = guess_key(cipher_texts)\n",
     "print(sum(1 for a, g in zip(secret_key, gk) if a == g) / len(secret_key))\n",
-    "# gk"
+    "# gk\n",
+    "print(dec_otp_partial(gk, cipher_texts[7]).decode(\"utf8\"))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "gk[0] = cipher_texts[0][0] ^ ord(\"s\")\n",
+    "gk[2] = cipher_texts[0][2] ^ ord(\"o\")\n",
+    "gk[3] = cipher_texts[0][3] ^ ord(\"v\")\n",
+    "gk[4] = cipher_texts[0][4] ^ ord(\"e\")"
    ]
   },
   {
