Dodano malo opisa

--- a/CB.ipynb
+++ b/CB.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 98,
    "metadata": {
     "tags": []
    },
@@ -97,7 +97,7 @@
     "        msg = msg.replace(\"š\", \"s\")\n",
     "        msg = msg.replace(\"ž\", \"z\")\n",
     "        msg = \" \".join(msg.split())\n",
-    "        return \"\".join(x for x in msg if x in 'abcdefghijklmnoprsštuvz ')\n",
+    "        return \"\".join(x for x in msg if x in 'abcdefghijklmnoprstuvz ')\n",
     "\n",
     "    data = [\n",
     "    \"Slovenija je evropska država z zemljepisno lego na skrajnem severu Sredozemlja in na skrajnem jugu Srednje Evrope\",\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 99,
    "metadata": {
     "tags": []
    },
@@ -147,21 +147,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7889908256880734\n",
-      "* ***la*i n*ro*ov so m** stevilnimi *ar*di tudi slo*enci s p*l*ti*ni* program*m zahte*al* zedi*je*o slo*enij*\n"
-     ]
-    }
-   ],
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "def guess_key_old(ciphertexts):\n",
     "    key = bytearray(len(ciphertexts[0]))\n",
@@ -188,14 +175,52 @@
     "                #print(\"break: found SPACE\")\n",
     "                break\n",
     "        \n",
-    "    return key\n",
-    "\n",
-    "def multiple_xor(position, ciphertexts):\n",
-    "\n",
-    "    for c1 in ciphertexts:\n",
-    "        if all(c1[position] ^ c2[position] >= 65 or c1[position] ^ c2[position] == 0 for c2 in ciphertexts if c2 != c1):\n",
-    "            return c1[position] ^ ord(' ')\n",
+    "    return key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7889908256880734\n",
+      "*l***ni*a j* e*ropska **zava z zemlj*pi*no lego na *krajnem *e*er* s*edozemlj* in na *kr*jnem *ug* sred*je e*\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiple_xor1(pos, cts):\n",
+    "    for c1 in cts:\n",
+    "        if all(c1[pos] ^ c2[pos] >= 65 or c1[pos] ^ c2[pos] == 0 for c2 in cts if c2 != c1):\n",
+    "            return c1[pos] ^ ord(' ')\n",
     "    \n",
+    "    return 0\n",
+    "\n",
+    "def multiple_xor(pos, cts):\n",
+    "    # na dani poziciji vsak znak tajnopisa paroma XORamo z istoleznim znakom v vsakem drugem tajnopisu\n",
+    "    # ce za nek znak izkaze, je rezultat te operacije vedno vrednost >= 65 ali == 0\n",
+    "    # potem je ta znak presledek\n",
+    "    # znak XOR-amo s presledkom in dobimo kljuc in ga vrnemo\n",
+    "    # sicer za znak kljuca vrnemo vrednost 0\n",
+    "    for c1 in cts:\n",
+    "        is_c1_space = True\n",
+    "        \n",
+    "        for c2 in cts:\n",
+    "            if c1 == c2:\n",
+    "                continue\n",
+    "            \n",
+    "            if 0 < c1[pos] ^ c2[pos] < 65:\n",
+    "                is_c1_space = False\n",
+    "            \n",
+    "        if is_c1_space:\n",
+    "            return c1[pos] ^ ord(' ')    \n",
+    "\n",
     "    return 0\n",
     "\n",
     "def guess_key(ciphertexts):\n",
@@ -204,11 +229,21 @@
     "    for i in range(len(ciphertexts[0])):\n",
     "        key[i] = multiple_xor(i, ciphertexts)\n",
     "    return key\n",
-    "    \n",
+    "\n",
+    "\n",
     "gk = guess_key(cipher_texts)\n",
     "print(sum(1 for a, g in zip(secret_key, gk) if a == g) / len(secret_key))\n",
-    "# gk\n",
-    "print(dec_otp_partial(gk, cipher_texts[7]).decode(\"utf8\"))"
+    "print(dec_otp_partial(gk, cipher_texts[0]).decode(\"ascii\"))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "for c in cipher_texts:\n",
+    "    print(dec_otp_partial(gk, c).decode(\"ascii\"))"
    ]
   },
   {
@@ -237,90 +272,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
-    "def display(bytez):\n",
-    "    return \"\".join(chr(i) for i in bytez)\n",
-    "\n",
-    "def attempts(crib):\n",
-    "    attempts = []\n",
-    "    binary = [ord(c) for c in crib]\n",
-    "\n",
-    "    for i in range(len(xor) - len(binary)):\n",
-    "        guess = [x ^ y for x, y in zip(binary, xor[i:i+len(binary)])]\n",
-    "        string = display(guess)\n",
-    "        attempts.append(( entropy(string), string ))\n",
-    "\n",
-    "    attempts.sort(key=lambda tup: tup[0])\n",
-    "    return attempts[0][1]\n",
-    "\n",
-    "def entropy1(string):\n",
-    "    e = 0\n",
-    "    string = string.replace(\" \", \"\")#.lower()\n",
-    "    for i in range(len(string)):\n",
-    "        for j in range(i+1, len(string)):\n",
-    "            e += (ord(string[i]) - ord(string[j]))**2\n",
-    "    \n",
-    "    return e / len(string) # / len(string)\n",
-    "\n",
-    "def entropy(string):\n",
-    "    e = 0\n",
-    "    string = string.replace(\" \", \"\").upper()\n",
-    "    for i in range(len(string)):\n",
-    "        e += (77.5 - ord(string[i]))**2 # 70.55\n",
-    "    \n",
-    "    return e / len(string)"
+    "import string"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
-    "# Electronic mail (email or e-mail) is a method of exchanging messages (mail) between people using Internet Mail Extensions (MIME) to carry text in other character sets and multimedia content "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "attempts(\"in other\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "b = attempts(\n",
-    "    \" electronic devices \")\n",
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "cts"
+    "xors = {}\n",
+    "for ch1 in string.printable:\n",
+    "    for ch2 in string.printable:\n",
+    "        key = ord(ch1) ^ ord(ch2)\n",
+    "        if ch1 == ch2:\n",
+    "            continue\n",
+    "        \n",
+    "        if not key in xors:\n",
+    "            xors[key] = set()          \n",
+    "            \n",
+    "        pair = (ch1, ch2) if ch1 > ch2 else (ch2, ch1)\n",
+    "        \n",
+    "        xors[key].add(pair)\n",
+    "        \n",
+    "print(len(xors))\n",
+    "for k, v in xors.items():\n",
+    "    print(k, v)\n",
+    "        "
    ]
   }
  ],
