--- a/CB.ipynb
+++ b/CB.ipynb
@@ -54,6 +54,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "assert xor_bytes([1, 2, 3], [3, 2, 1]) == bytes([2, 0, 2])\n",
+    "assert xor_bytes([0, 0, 0], [3, 2, 1]) == bytes([3, 2, 1])\n",
+    "assert xor_bytes([1, 1, 1], [1, 1, 1]) == bytes([0, 0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "tags": []
@@ -67,7 +80,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 150,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "assert enc_otp([1, 2, 3], [1, 1, 1]) == xor_bytes([1, 2, 3], [1, 1, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
    "metadata": {
     "tags": []
    },
@@ -75,8 +99,28 @@
    "source": [
     "def dec_otp(key, ct):\n",
     "    \"\"\"Desifrirni algoritem enkratne podloge\"\"\"\n",
-    "    return xor_bytes(key, ct)\n",
-    "\n",
+    "    return xor_bytes(key, ct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "assert dec_otp([1, 2, 3], [1, 1, 1]) == xor_bytes([1, 2, 3], [1, 1, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "def dec_otp_partial(key, ct):\n",
     "    \"\"\"Desifrira samo tiste znake, kjer kljuc ni 0 -- ce je, kot znak nastavi *\"\"\"\n",
     "    return bytes(k ^ c if k > 0 else ord(\"*\")  for k, c in zip(key, ct))"
@@ -84,7 +128,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 158,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "assert dec_otp_partial([1, 0, 1], [2, 2, 2]) == bytes([3, ord(\"*\"), 3])\n",
+    "assert dec_otp_partial([1, 1, 1], [2, 2, 2]) == dec_otp([1, 1, 1], [2, 2, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {
     "tags": []
    },
@@ -110,6 +177,7 @@
     "    \"V Pomladi narodov so med številnimi narodi tudi Slovenci s političnim programom zahtevali Zedinjeno Slovenijo\",\n",
     "    \"Geografsko leži Slovenija v srednji Evropi oziroma v jugovzhodni Evropi na stičišču Alp, Dinarskega gorstva, Panonske nižine in Sredozemlja.\",\n",
     "    \"Največ slovenskega površja sestavljajo kamnine iz časa, mezozoika (apnenec, dolomit) in kenozoika, torej terciarja (lapor, peščenjak, fliš) in kvartarja (prod, pesek, glina, konglomerat).\",\n",
+    "    #\"Tole je pa sedaj 1, 2, 3, 4 zelo zanimivo. Tole je pa sedaj 1, 2, 3, 4 zelo zanimivo. Tole je pa sedaj 1, 2, 3, 4 zelo zanimivo. zelo zanimivo. zelo zanimivo.\"\n",
     "    ]\n",
     "    # target = \"ce sifriras z enkratno podlogo, ne uporabi istega kljuce vec kot enkrat\"\n",
     "    length = len(min(data, key=lambda x:len(x)))\n",
@@ -118,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 202,
    "metadata": {
     "tags": []
    },
@@ -180,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 203,
    "metadata": {
     "tags": []
    },
@@ -203,9 +271,9 @@
     "    return 0\n",
     "\n",
     "def multiple_xor(pos, cts):\n",
-    "    # na dani poziciji vsak znak tajnopisa paroma XORamo z istoleznim znakom v vsakem drugem tajnopisu\n",
-    "    # ce za nek znak izkaze, je rezultat te operacije vedno vrednost >= 65 ali == 0\n",
-    "    # potem je ta znak presledek\n",
+    "    # na dani poziciji znak tajnopisa paroma XORamo z istoleznim znakom v vsakem drugem tajnopisu\n",
+    "    # ce se za nek znak izkaze, da je rezultat te operacije vedno vrednost >= 65 ali == 0\n",
+    "    # potem znak na dani poziciji presledek\n",
     "    # znak XOR-amo s presledkom in dobimo kljuc in ga vrnemo\n",
     "    # sicer za znak kljuca vrnemo vrednost 0\n",
     "    for c1 in cts:\n",
@@ -227,7 +295,7 @@
     "    key = bytearray(len(ciphertexts[0]))\n",
     "\n",
     "    for i in range(len(ciphertexts[0])):\n",
-    "        key[i] = multiple_xor(i, ciphertexts)\n",
+    "        key[i] = multiple_xor1(i, ciphertexts)\n",
     "    return key\n",
     "\n",
     "\n",
@@ -237,25 +305,91 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 208,
    "metadata": {
     "tags": []
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slovenija j* e*ropska **zava z zemlj*pi*no lego na *krajnem *e*er* s*edozemlj* in na *kr*jnem *ug* sred*je e*\n",
+      "skozi slove*sk* zgodov**o so pomembn* k*lturni vpli*i prihaj*l* i* s*ednjeevr*pskega *n *penin*ke*a kul*urne*\n",
+      "slovenija i*a *ospodar**o ureditev k* t*melji na pr*stem trg* *da* j* po medn*rodnih *er*lih u*rs*ena m*d dr*\n",
+      "poimenovanj* z* sloven** izvira iz b*se*e slovani i*vor te p* *e *ej*sen je i*peljank* i* kore*a *lov k* je *\n",
+      "prvic je bi*o *me upor**ljeno za drz*vn* tvorbo fed*ralna sl*v*ni*a *i je po *klepu z*se*anja *lo*enske*a na*\n",
+      "slovanski p*ed*iki dan**njih slovenc*v *o se na ili*sko ozem*j* s*ov*nije nas*lili v *es*em st*le*ju v *edme*\n",
+      "okoli leta *is*c so bi** napisani br*zi*ski spomeni*i prvi p*s*i *ok*ment v s*ovensci*i *n prv* s*ovans*i za*\n",
+      "v pomladi n*ro*ov so m** stevilnimi *ar*di tudi slo*enci s p*l*ti*ni* program*m zahte*al* zedi*je*o slo*enij*\n",
+      "geografsko *ez* sloven**a v srednji *vr*pi oziroma * jugovzh*d*i *vr*pi na st*ciscu a*p *inars*eg* gors*va p*\n",
+      "najvec slov*ns*ega pov**ja sestavlja*o *amnine iz c*sa mezoz*i*a *pn*nec dolo*it in k*no*oika *or*j ter*iarj*\n"
+     ]
+    }
+   ],
    "source": [
     "for c in cipher_texts:\n",
     "    print(dec_otp_partial(gk, c).decode(\"ascii\"))"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 207,
    "metadata": {
     "tags": []
    },
+   "outputs": [],
    "source": [
     "gk[0] = cipher_texts[0][0] ^ ord(\"s\")\n",
     "gk[2] = cipher_texts[0][2] ^ ord(\"o\")\n",
     "gk[3] = cipher_texts[0][3] ^ ord(\"v\")\n",
-    "gk[4] = cipher_texts[0][4] ^ ord(\"e\")"
+    "gk[4] = cipher_texts[0][4] ^ ord(\"e\")\n",
+    "gk[7] = cipher_texts[0][7] ^ ord(\"j\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gnetljivost tajnopisa\n",
+    "\n",
+    "Ana želi poslati zaupno pošto Boru, vas, ki igrate vlogo napadalca Nandija, pa vsebina sporočila _zares_ zanima.\n",
+    "\n",
+    "Na srečo vam gre nekaj reči na roko. \n",
+    "\n",
+    "Prvič, Anin računalnik nima internetne povezave, vaš mobilni telefon pa. Zato ji prijazno ponudite, da zanjo postavite mobilno dostopno točko, preko katere se bo lahko povezala v internet in dostopala do poštnega strežnika FMTP.\n",
+    "\n",
+    "Protokol FMTP je najnovejši protokol pošiljanje elektronske pošte. Kratica pomeni Funny Mail Transfer Protocol in gre za preprost protokol, ki je besedilno osnovan: prva vrstica označuje naslov prejemnika, druga naslov pošiljatelja, tretja zadevo, četrta je vedno prazna in na koncu je sporočilo.\n",
+    "\n",
+    "Vse, kar mora Anin poštni odjemalec storiti, da pošlje e-pošto, je, da strežniku FMTP dostavi niz, podoben naslednjemu.\n",
+    "\n",
+    "```txt\n",
+    "prejemnik@enadomena.com\n",
+    "posiljatelj@drugadomena.com\n",
+    "Zadeva sporocila\n",
+    "\n",
+    "<Samo sporocilo>\n",
+    "```\n",
+    "\n",
+    "Vse predhodne ali zaključne presledke v vsaki vrstici odstranimo pred obdelavo. Na primer, e-pošto zgoraj bi lahko napisali kot spodnjo in ne bi bilo nobene razlike.\n",
+    "\n",
+    "\n",
+    "```txt\n",
+    "                    prejemnik@enadomena.com               \n",
+    "    posiljatelj@drugadomena.com                    \n",
+    "Zadeva sporocila\n",
+    "\n",
+    "<Samo sporocilo>\n",
+    "```\n",
+    "\n",
+    "Tretjič, Ana vam v dobri veri (kakšna naivnost!) pove, da pošilja sporočilo Boru. (Torej poznate vsebino prve vrstice v čistopisu.)\n",
+    "\n",
+    "Četrtič, Ana uporablja tokovno šifro brez kakršnih koli storitev zagotavljanja celovitosti.\n",
+    "\n",
+    "### Naloga\n",
+    "\n",
+    "Ker nastopate v vlogi posrednika, lahko sedaj spremenite sporočilo tako, da strežnik FMTP ne bo poslal pošte Boru, temveč jo bo poslal na naslov, ki ga nadzirate vi, npr. `nandi@obvlada.si`."
    ]
   },
   {
@@ -288,7 +422,7 @@
    "source": [
     "xors = {}\n",
     "for ch1 in string.printable:\n",
-    "    for ch2 in string.printable:\n",
+    "    for ch2 in [\" \"]: #string.printable:\n",
     "        key = ord(ch1) ^ ord(ch2)\n",
     "        if ch1 == ch2:\n",
     "            continue\n",
@@ -305,6 +439,13 @@
     "    print(k, v)\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
