Naloga o gnetljivosti tajnopisa

--- a/CB.ipynb
+++ b/CB.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -140,18 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import string"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -186,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -215,40 +204,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "def guess_key_old(ciphertexts):\n",
-    "    key = bytearray(len(ciphertexts[0]))\n",
-    "\n",
-    "    for k in range(len(ciphertexts[0])):\n",
-    "        guess = None\n",
-    "\n",
-    "        for i, c1 in enumerate(ciphertexts):\n",
-    "            for j, c2 in enumerate(ciphertexts):\n",
-    "                print(k, i, j)\n",
-    "                if c1 == c2:\n",
-    "                    continue\n",
-    "\n",
-    "                if 0 < c1[k] ^ c2[k] < 65:\n",
-    "                    print(\"break: < 65\")\n",
-    "                    guess = ord('?')\n",
-    "                    break\n",
-    "\n",
-    "                guess = ' '\n",
-    "            \n",
-    "            if guess == ' ': \n",
-    "                key[k] = c1[k] ^ ord(' ')\n",
-    "                print(k, i, j, \"break: found SPACE\")\n",
-    "                #print(\"break: found SPACE\")\n",
-    "                break\n",
-    "        \n",
-    "    return key"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -258,7 +215,7 @@
      "output_type": "stream",
      "text": [
       "0.7889908256880734\n",
-      "*l***ni*a j* e*ropska **zava z zemlj*pi*no lego na *krajnem *e*er* s*edozemlj* in na *kr*jnem *ug* sred*je e*\n"
+      "*l***ni*a j* e*ropska **zava z zemlj*pi*no lego na *krajnem *e*er* s*edozemlj* in na *kr*jnem *ug* sre**je e*\n"
      ]
     }
    ],
@@ -273,9 +230,9 @@
     "def multiple_xor(pos, cts):\n",
     "    # na dani poziciji znak tajnopisa paroma XORamo z istoleznim znakom v vsakem drugem tajnopisu\n",
     "    # ce se za nek znak izkaze, da je rezultat te operacije vedno vrednost >= 65 ali == 0\n",
-    "    # potem znak na dani poziciji presledek\n",
-    "    # znak XOR-amo s presledkom in dobimo kljuc in ga vrnemo\n",
-    "    # sicer za znak kljuca vrnemo vrednost 0\n",
+    "    # potem je znak na dani poziciji presledek\n",
+    "    # znak XOR-amo s presledkom, dobimo kljuc in ga vrnemo\n",
+    "    # v nasprotnem primeru za znak kljuca vrnemo vrednost 0\n",
     "    for c1 in cts:\n",
     "        is_c1_space = True\n",
     "        \n",
@@ -306,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -315,16 +272,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "slovenija j* e*ropska **zava z zemlj*pi*no lego na *krajnem *e*er* s*edozemlj* in na *kr*jnem *ug* sred*je e*\n",
-      "skozi slove*sk* zgodov**o so pomembn* k*lturni vpli*i prihaj*l* i* s*ednjeevr*pskega *n *penin*ke*a kul*urne*\n",
-      "slovenija i*a *ospodar**o ureditev k* t*melji na pr*stem trg* *da* j* po medn*rodnih *er*lih u*rs*ena m*d dr*\n",
-      "poimenovanj* z* sloven** izvira iz b*se*e slovani i*vor te p* *e *ej*sen je i*peljank* i* kore*a *lov k* je *\n",
-      "prvic je bi*o *me upor**ljeno za drz*vn* tvorbo fed*ralna sl*v*ni*a *i je po *klepu z*se*anja *lo*enske*a na*\n",
-      "slovanski p*ed*iki dan**njih slovenc*v *o se na ili*sko ozem*j* s*ov*nije nas*lili v *es*em st*le*ju v *edme*\n",
-      "okoli leta *is*c so bi** napisani br*zi*ski spomeni*i prvi p*s*i *ok*ment v s*ovensci*i *n prv* s*ovans*i za*\n",
-      "v pomladi n*ro*ov so m** stevilnimi *ar*di tudi slo*enci s p*l*ti*ni* program*m zahte*al* zedi*je*o slo*enij*\n",
-      "geografsko *ez* sloven**a v srednji *vr*pi oziroma * jugovzh*d*i *vr*pi na st*ciscu a*p *inars*eg* gors*va p*\n",
-      "najvec slov*ns*ega pov**ja sestavlja*o *amnine iz c*sa mezoz*i*a *pn*nec dolo*it in k*no*oika *or*j ter*iarj*\n"
+      "*l***ni*a j* e*ropska **zava z zemlj*pi*no lego na *krajnem *e*er* s*edozemlj* in na *kr*jnem *ug* sre**je e*\n",
+      "*k*** s*ove*sk* zgodov**o so pomembn* k*lturni vpli*i prihaj*l* i* s*ednjeevr*pskega *n *penin*ke*a ku**urne*\n",
+      "*l***ni*a i*a *ospodar**o ureditev k* t*melji na pr*stem trg* *da* j* po medn*rodnih *er*lih u*rs*ena **d dr*\n",
+      "*o***no*anj* z* sloven** izvira iz b*se*e slovani i*vor te p* *e *ej*sen je i*peljank* i* kore*a *lov ** je *\n",
+      "*r*** j* bi*o *me upor**ljeno za drz*vn* tvorbo fed*ralna sl*v*ni*a *i je po *klepu z*se*anja *lo*ensk**a na*\n",
+      "*l***ns*i p*ed*iki dan**njih slovenc*v *o se na ili*sko ozem*j* s*ov*nije nas*lili v *es*em st*le*ju v**edme*\n",
+      "*k*** l*ta *is*c so bi** napisani br*zi*ski spomeni*i prvi p*s*i *ok*ment v s*ovensci*i *n prv* s*ovan**i za*\n",
+      "* ***la*i n*ro*ov so m** stevilnimi *ar*di tudi slo*enci s p*l*ti*ni* program*m zahte*al* zedi*je*o sl**enij*\n",
+      "*e***af*ko *ez* sloven**a v srednji *vr*pi oziroma * jugovzh*d*i *vr*pi na st*ciscu a*p *inars*eg* gor**va p*\n",
+      "*a***c *lov*ns*ega pov**ja sestavlja*o *amnine iz c*sa mezoz*i*a *pn*nec dolo*it in k*no*oika *or*j te**iarj*\n"
      ]
     }
    ],
@@ -335,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -358,11 +315,11 @@
     "\n",
     "Na srečo vam gre nekaj reči na roko. \n",
     "\n",
-    "Prvič, Anin računalnik nima internetne povezave, vaš mobilni telefon pa. Zato ji prijazno ponudite, da zanjo postavite mobilno dostopno točko, preko katere se bo lahko povezala v internet in dostopala do poštnega strežnika FMTP.\n",
+    "Prvič, Anin računalnik nima internetne povezave, vaš mobilni telefon pa. Zato ji prijazno ponudite, da zanjo postavite mobilno dostopno točko, preko katere se bo lahko povezala v internet in dostopala do poštnega strežnika. Poštni strežnik bo nato sporočilo dostavil Boru. \n",
     "\n",
-    "Protokol FMTP je najnovejši protokol pošiljanje elektronske pošte. Kratica pomeni Funny Mail Transfer Protocol in gre za preprost protokol, ki je besedilno osnovan: prva vrstica označuje naslov prejemnika, druga naslov pošiljatelja, tretja zadevo, četrta je vedno prazna in na koncu je sporočilo.\n",
+    "Ana in Bor uporabljata poseben protokol za pošto: protokol FMTP -- Funny Mail Transfer Protocol.  Gre za preprost besedilno-osnovan protokol: prva vrstica označuje naslov prejemnika, druga naslov pošiljatelja, tretja zadevo, četrta je vedno prazna in na koncu je sporočilo.\n",
     "\n",
-    "Vse, kar mora Anin poštni odjemalec storiti, da pošlje e-pošto, je, da strežniku FMTP dostavi niz, podoben naslednjemu.\n",
+    "Vse, kar mora Anin poštni odjemalec storiti, da pošlje sporočilo, je, da strežniku FMTP dostavi besedilni niz, podoben naslednjemu.\n",
     "\n",
     "```txt\n",
     "prejemnik@enadomena.com\n",
@@ -372,7 +329,7 @@
     "<Samo sporocilo>\n",
     "```\n",
     "\n",
-    "Vse predhodne ali zaključne presledke v vsaki vrstici odstranimo pred obdelavo. Na primer, e-pošto zgoraj bi lahko napisali kot spodnjo in ne bi bilo nobene razlike.\n",
+    "Vse morebitne predhodne ali zaključne presledke v vsaki vrstici odstranimo pred obdelavo. Na primer, e-pošto zgoraj bi lahko napisali kot spodnjo in ne bi bilo nobene razlike.\n",
     "\n",
     "\n",
     "```txt\n",
@@ -383,69 +340,124 @@
     "<Samo sporocilo>\n",
     "```\n",
     "\n",
-    "Tretjič, Ana vam v dobri veri (kakšna naivnost!) pove, da pošilja sporočilo Boru. (Torej poznate vsebino prve vrstice v čistopisu.)\n",
+    "Tretjič, Ana vam v dobri veri -- kakšna naivnost! -- pove, da pošilja elektronsko sporočilo Boru in da uporablja protokol FMTP. (Torej poznate strukturo sporočila in vsebino prve vrstice čistopisa.)\n",
     "\n",
     "Četrtič, Ana uporablja tokovno šifro brez kakršnih koli storitev zagotavljanja celovitosti.\n",
     "\n",
-    "### Naloga\n",
-    "\n",
-    "Ker nastopate v vlogi posrednika, lahko sedaj spremenite sporočilo tako, da strežnik FMTP ne bo poslal pošte Boru, temveč jo bo poslal na naslov, ki ga nadzirate vi, npr. `nandi@obvlada.si`."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "chars = \"abcdefghijklmnopqrstuvwxyz\".upper()\n",
-    "# chars = chars.upper()\n",
-    "# chars += \"0123456789\"\n",
-    "\n",
-    "sum(ord(ch) for ch in chars) / len(chars)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "import string"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "xors = {}\n",
-    "for ch1 in string.printable:\n",
-    "    for ch2 in [\" \"]: #string.printable:\n",
-    "        key = ord(ch1) ^ ord(ch2)\n",
-    "        if ch1 == ch2:\n",
-    "            continue\n",
-    "        \n",
-    "        if not key in xors:\n",
-    "            xors[key] = set()          \n",
-    "            \n",
-    "        pair = (ch1, ch2) if ch1 > ch2 else (ch2, ch1)\n",
-    "        \n",
-    "        xors[key].add(pair)\n",
-    "        \n",
-    "print(len(xors))\n",
-    "for k, v in xors.items():\n",
-    "    print(k, v)\n",
-    "        "
+    "Ker nastopate v vlogi **posrednika**, lahko sedaj spremenite sporočilo tako, da strežnik FMTP ne bo poslal pošte Boru, temveč jo bo poslal na naslov, ki ga nadzirate vi, npr. `nandi@obvlada.si`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ana in Bor si enkrat tedensko v zivo izmenjata 1000 bajtov\n",
+    "# nakljucnih vrednosti za morebitne potrebe sifriranja\n",
+    "ana_bor_psk = gen_key(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ana posilja sifrirano sporocilo na streznik\n",
+      "Tajnopis (HEX): 711e890583461c995839d588aa79039ab2b1d865ceb84e871b1746b1cd17f39810c893d9942d84fc3606395287cbc4c1d2390a05b893de0286e8faa2831b0af076caeb8f1e5d8064fe32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ana pripravi sporočilo\n",
+    "email = \"\"\"bor@student.uni-lj.si\n",
+    "ana@student.uni-lj.si\n",
+    "Hej\n",
+    "\n",
+    "Na faksu si pozabil kapo.\"\"\".strip()\n",
+    "\n",
+    "# In ga šifrira z enkratno podlogo\n",
+    "ct = enc_otp(ana_bor_psk, email.encode(\"utf8\"))\n",
+    "\n",
+    "# Nato ga pošlje (to simuliramo) na streznik FMTP\n",
+    "print(\"Ana posilja sifrirano sporocilo na streznik\")\n",
+    "print(\"Tajnopis (HEX):\", ct.hex())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sedaj je na potezi napadalec Nandi.\n",
+    "\n",
+    "Implementirajte funckijo `change_ct(ct, new_email)`, ki na vhodu prejme tajnopis in email naslov. Spremenite tajnopis tako, da ga bo strežnik FMTP še vedno brez dešifriral, a kot prejemnik ne bo naveden Bor, temveč email naslov, ki je podan v argumentu `new_email`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def change_ct(ct, new_email):\n",
+    "    cur = \"bor@student.uni-lj.si\"\n",
+    "    new = \"nandi@obvlada.si     \"\n",
+    "    \n",
+    "    l = bytearray(ct)\n",
+    "    \n",
+    "    for i, (c, n) in enumerate(zip(cur, new)):\n",
+    "        l[i] = l[i] ^ ord(c) ^ ord(n)\n",
+    "        \n",
+    "    return l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Z poganjanjem spodnje celice lahko preverite, ali vaša funkcija deluje pravilno. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Streznik FMTP prejel sporocilo: 7d1095219972069f4b3bc0c2be3919defefbd63687b84e871b1746b1cd17f39810c893d9942d84fc3606395287cbc4c1d2390a05b893de0286e8faa2831b0af076caeb8f1e5d8064fe32\n",
+      "Desifrirano sporocilo:\n",
+      "nandi@obvlada.si     \n",
+      "ana@student.uni-lj.si\n",
+      "Hej\n",
+      "\n",
+      "Na faksu si pozabil kapo.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fmtp_receive(key, ct):\n",
+    "    print(\"Streznik FMTP prejel sporocilo:\", ct.hex())\n",
+    "    pt = dec_otp(key, ct)\n",
+    "    print(\"Desifrirano sporocilo:\")\n",
+    "    print(pt.decode(\"utf8\"))\n",
+    "\n",
+    "fmtp_receive(ana_bor_psk, change_ct(ct, \"nandi@obvlada.si\"))"
+   ]
   }
  ],
  "metadata": {
